--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,23 @@
 ---
 baseurl: ""
+defaults:
+  - scope:
+      path: "_news"
+      type: "news"
+    values:
+      layout: "news_item"
+  - scope:
+        path: "_sources"
+        type: "sources"
+    values:
+      layout: "source"
+collections:
+  events:
+    output: true
+  news:
+    output: true
+  sources:
+    output: true
 description: This is my place where I post my thoughts to share with others.
 email: chris@crickertech.com
 exclude:
@@ -7,9 +25,11 @@ exclude:
   - Vagrantfile
   - README.md
   - LICENSE
-github_username:  calef
+future: true
+github_username: calef
 plugins:
   - jekyll-feed
+show_excerpts: true
 theme: minima
 title: Kachess
 url: "https://kachess.dev"
